--- a/3-3/pom.xml
+++ b/3-3/pom.xml
@@ -4,6 +4,12 @@
   <artifactId>3-3</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <repositories>
+  	<repository>
+  		<id>codelds</id>
+  		<url>http://code.lds.org/nexus/content/groups/main-repo</url>
+  	</repository>
+  </repositories>
   
     <properties>
 
