--- a/3-4/pom.xml
+++ b/3-4/pom.xml
@@ -4,7 +4,14 @@
   <artifactId>3-4</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  
+  <!-- 개발자가 추가함 //시작 -->
+  <repositories>
+ 	<repository>
+ 		<id>codelds</id>
+ 		<url>http://code.lds.org/nexus/content/groups/main-repo</url>
+ 	</repository>
+  </repositories>
+ <!-- 개발자가 추가함 //끝 -->
     <properties>
 
 		<!-- Generic properties -->
@@ -104,5 +111,33 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- 개발자가 추가함 (위쪽에는 기본으로 들어있는 것들) //시작 -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+		    <artifactId>ojdbc6</artifactId>
+		    <version>11.2.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>3.1.1.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<!-- 개발자가 추가함 (위쪽에는 기본으로 들어있는 것들) //끝 -->
+		
 	</dependencies>	
 </project>
