--- a/3-6/pom.xml
+++ b/3-6/pom.xml
@@ -4,7 +4,14 @@
   <artifactId>3-6</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  
+  <!-- 개발자가 추가함 //시작 -->
+  <repositories>
+ 	<repository>
+ 		<id>codelds</id>
+ 		<url>http://code.lds.org/nexus/content/groups/main-repo</url>
+ 	</repository>
+  </repositories>
+  <!-- 개발자가 추가함 //끝 -->
     <properties>
 
 		<!-- Generic properties -->
@@ -103,6 +110,59 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+		
+		<!-- 개발자가 추가함 (위쪽에는 기본으로 들어있는 것들) //시작 -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+		    <artifactId>ojdbc6</artifactId>
+		    <version>11.2.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>3.1.1.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<!-- 개발자가 추가함 (위쪽에는 기본으로 들어있는 것들) //끝 -->
+		<!-- 3-5에서 추가된 dependency 3개! //시작 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>2.5.6</version>
+		</dependency>
+		<dependency>
+			<groupId>aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.5.4</version>
+		</dependency>
+		<dependency>
+			<groupId>aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.5.4</version>
+		</dependency>
+		<!-- 3-5에서 추가된 dependency 3개! //끝 -->
+		<!-- 3-6에서 추가된 dependency //시작 -->
+		<!-- https://mvnrepository.com/artifact/servlets.com/cos -->
+		<dependency>
+		    <groupId>servlets.com</groupId>
+		    <artifactId>cos</artifactId>
+		    <version>05Nov2002</version>
+		</dependency>
+		<!-- 3-6에서 추가된 dependency //끝 -->
+		
 	</dependencies>	
 </project>
