[INIT/UPD] mySH : 홈화면, 소개메뉴, 로그인, 로그아웃 완성. ~회원가입 작성중

--- a/mySweetHome/pom.xml
+++ b/mySweetHome/pom.xml
@@ -159,7 +159,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.0.2GA</version>
+			<version>4.0.2.GA</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-fileupload</groupId>
