--- a/mySweetHome/pom.xml
+++ b/mySweetHome/pom.xml
@@ -177,5 +177,12 @@
 			<version>1.0.0.GA</version>
 		</dependency>
 		<!-- 어노테이션 폼체크를 위한 라이브러리 추가 //끝 -->
+		<!-- 어노테이션 폼체크 NotBlank를 위한 라이브러리 추가 //시작 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>2.5.4</version>
+		</dependency>
+		<!-- 어노테이션 폼체크 NotBlank를 위한 라이브러리 끝 //시작 -->
 	</dependencies>	
 </project>
